<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">hng_s_application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_xin_cha_o">Xin chào</string>
<string name="lbl_30e_330_67t">30E-330.67T</string>
<string name="msg_tra_ng_tha_i">Trạng thái:         Thành công</string>
<string name="lbl_30_0003">30.000đ</string>
<string name="lbl_nsct">nSCT</string>
<string name="lbl_30_0002">+30.000đ</string>
<string name="msg_tk_nsct_30_0003">TK nSCT +30,000VND vao 18:11:08 11/02/2023. So du: 84,000VND. ND: Nap tien vao tai khoan. Hotline: 19006111 </string>
<string name="msg_th_ng_k_doanh">Thống kê doanh thu</string>
<string name="msg_tk_nsct_30_0002">TK nSCT -30,000VND vao </string>
<string name="lbl2">+</string>
<string name="lbl_s_d_vi2">Số dư ví:</string>
<string name="msg_hotline_1900">. Hotline: 19006111 </string>
<string name="lbl_tra_c_u">Tra cứu</string>
<string name="lbl_que_t_bi_n_s">Quét biển số</string>
<string name="lbl_nga_y_l_y">Ngày lấy</string>
<string name="msg_s_ti_n_g_i">Số tiền gửi xe</string>
<string name="lbl_qu_n_m_t_kh_u">Quên mật khẩu</string>
<string name="lbl_m_t_kh_u_m_i">Mật khẩu mới</string>
<string name="lbl_t_nga_y">Từ ngày</string>
<string name="msg_th_i_gian_l_y">Thời gian lấy: 19:17:08 - 19/02/2023</string>
<string name="msg_s_i_n_thoa">Số điện thoại đăng ký</string>
<string name="lbl_ti_m_ki_m">Tìm kiếm</string>
<string name="lbl_gui_xe_cua">gui xe cua</string>
<string name="msg_li_ch_s_giao">Lịch sử giao dịch</string>
<string name="lbl_s_d_vi">Số dư ví: </string>
<string name="lbl_nh_p_ma_otp">Nhập mã OTP</string>
<string name="msg_ma_ta_i_khoa_n">Mã tài khoản: PD00001113</string>
<string name="lbl_200_000">200.000đ</string>
<string name="lbl_54_000">54.000</string>
<string name="lbl_30e_330_60t">30E-330.60T</string>
<string name="lbl_pd00001113">PD00001113</string>
<string name="msg_th_i_gian_g_i2">Thời gian gửi: 17:54:47 - 02/02/2023</string>
<string name="lbl_ti_n_va_o">Tiền vào</string>
<string name="lbl_500_000">500.000đ</string>
<string name="lbl_ti_p_tu_c">Tiếp tục</string>
<string name="msg_ng_ky_ta_i_k">Đăng ký tài khoản thành công</string>
<string name="msg_loa_i_giao_di_c">Loại giao dịch</string>
<string name="lbl_bi_n_s_xe">Biển số xe</string>
<string name="msg_vui_lo_ng_nh_p">Vui lòng nhập mã OTP và mật khẩu mới</string>
<string name="msg_19_17_08_18_0">19:17:08 - 18/02/2023</string>
<string name="msg_th_i_gian_g_i">Thời gian gửi: 19:17:08 - 18/02/2023</string>
<string name="msg_nh_p_ma_ta_i">Nhập mã tài khoản/ sđt cần nạp tiền</string>
<string name="lbl_pd00201113">PD00201113</string>
<string name="lbl_tra_ng_tha_i">Trạng thái</string>
<string name="lbl_ng_nh_p">Đăng nhập</string>
<string name="lbl_stt">Stt</string>
<string name="lbl_thay_i_ttkh">Thay đổi TTKH</string>
<string name="lbl_s_ti_n">Số tiền</string>
<string name="lbl_trang_chu">Trang chủ</string>
<string name="msg_na_p_ti_n_va_o">Nạp tiền vào tài khoản nSCT</string>
<string name="msg_xa_c_minh_m_t">Xác minh mật khẩu mới</string>
<string name="lbl_ti_n_ra">Tiền ra</string>
<string name="lbl_0001">0001</string>
<string name="msg_s_ti_n">Số tiền:              30.000</string>
<string name="lbl_nga_y_sinh">Ngày sinh:</string>
<string name="lbl_ma_giao_di_ch">Mã giao dịch</string>
<string name="lbl_so_du">. So du: </string>
<string name="lbl_th_m_xe">Thêm xe</string>
<string name="msg_ma_u_bi_n_bi">Màu biển: Biển trắng</string>
<string name="lbl_check_in">Check in</string>
<string name="msg_18_11_08_11_0">18:11:08 - 11/02/2023</string>
<string name="lbl_active">Active</string>
<string name="msg_s_d_vi_94">Số dư ví: 94.000đ</string>
<string name="lbl_ng_ky">Đăng ký</string>
<string name="lbl_n_nga_y">Đến ngày</string>
<string name="lbl_hu_y">Hủy</string>
<string name="lbl_tk_nsct">TK nSCT </string>
<string name="msg_t_la_i_m_t">Đặt lại mật khẩu</string>
<string name="msg_s_d_kha_du2">Số dư khả dụng</string>
<string name="msg_danh_sa_ch_xe">Danh sách xe (2)</string>
<string name="lbl_30e_330_60t2">30E-330.60T </string>
<string name="lbl_ca_i_t">Cài đặt</string>
<string name="lbl_ma_ta_i_khoa_n">Mã tài khoản</string>
<string name="lbl_nga_y_g_i">Ngày gửi</string>
<string name="msg_m_ta_i_khoa_n">Mở tài khoản mới</string>
<string name="msg_tra_ng_tha_i2">Trạng thái:         Không thành công</string>
<string name="lbl_cccd">CCCD:</string>
<string name="msg_bi_n_s_xe_3">Biển số xe: 30A-321.72</string>
<string name="lbl_ho_va_t_n">Họ và tên: </string>
<string name="msg_i_n_th_ng_tin">Điền thông tin để tạo tài khoản mới</string>
<string name="lbl_30_000">-30.000đ</string>
<string name="lbl_4_000">4.000đ</string>
<string name="msg_vui_lo_ng_nh_p2">Vui lòng nhập mật khẩu cũ và mới để tạo mật khẩu mới</string>
<string name="msg_19_17_08_18_02">19:17:08 18/02/2023</string>
<string name="lbl_ho_va_t_n2">Họ và tên</string>
<string name="lbl_check_out">Check out</string>
<string name="lbl_100_000">100.000đ</string>
<string name="lbl_ma_otp">Mã OTP</string>
<string name="msg_qu_n_m_t_kh_u">Quên mật khẩu?</string>
<string name="lbl_c_p_nh_t">Cập nhật</string>
<string name="msg_so_du_54_000">. So du: 54,000VND. ND: Tru phi </string>
<string name="msg_xe_30e33060_ho"> xe 30E33060. Hotline: 19006111 </string>
<string name="lbl_m_ta_i_khoa_n">Mở tài khoản</string>
<string name="msg_nh_p_s_ti_n">Nhập số tiền (đ)</string>
<string name="msg_m_t_kh_u_123">Mật khẩu: 12345678</string>
<string name="lbl_hoa_t_ng">Hoạt động</string>
<string name="msg_th_i_gian_l_y2">Thời gian lấy: 17:54:47 - 03/02/2023</string>
<string name="lbl_t_t_ca">Tất cả</string>
<string name="msg_19_17_08_19_0">19:17:08 - 19/02/2023</string>
<string name="lbl_2_000_000">2.000.000đ</string>
<string name="lbl_ha_n_i">Hà Nội</string>
<string name="lbl_ma_tai_khoan2">Ma tai khoan</string>
<string name="lbl_54_0002">54.000đ</string>
<string name="msg_cho_n_nhanh_s">Chọn nhanh số tiền</string>
<string name="msg_11_08_11_02_20">:11:08 11/02/2023</string>
<string name="msg_tk_nsct_30_000">TK nSCT -30,000VND vao 19:17:08 18/02/2023. So du: 54,000VND. ND: Tru phi gui xe cua xe 30E33060. Hotline: 19006111 </string>
<string name="lbl_li_ch_s">Lịch sử</string>
<string name="lbl_t_n_ng_nh_p">Tên đăng nhập</string>
<string name="msg_thay_i_th_ng">Thay đổi thông tin</string>
<string name="lbl_18">18</string>
<string name="lbl_i_a_chi2">Địa chỉ</string>
<string name="lbl">**********</string>
<string name="lbl_tha_ng_02_2023">Tháng 02/2023</string>
<string name="msg_nga_y_th_c_hi">Ngày thực hiện</string>
<string name="msg_nguy_n_hoa_ng">Nguyễn Hoàng Tùng</string>
<string name="msg_k_t_qua_tra_c">Kết quả tra cứu</string>
<string name="msg_bi_n_s_30e">Biển số: 30E-777.79</string>
<string name="lbl_2_xe">(2 xe)</string>
<string name="msg_li_ch_s_xe_va2">Lịch sử xe vào /ra</string>
<string name="lbl_0383282433">0383282433</string>
<string name="msg_nh_p_la_i_m_t">Nhập lại mật khẩu mới</string>
<string name="lbl_30_000vnd_vao">30,000VND vao </string>
<string name="lbl_email">Email: </string>
<string name="msg_li_ch_s_g_i">Lịch sử gửi xe</string>
<string name="lbl_30a_321_72t">30A-321.72T</string>
<string name="lbl_000vnd_nd">,000VND. ND: </string>
<string name="lbl_84">84</string>
<string name="msg_ma_giao_di_ch">Mã giao dịch:    12841897</string>
<string name="lbl_1">1</string>
<string name="lbl_th_ng_tin_xe">Thông tin xe</string>
<string name="lbl_038968204">038968204</string>
<string name="lbl_9"> 9</string>
<string name="lbl_tra_ng_tha_i2">Trạng thái:</string>
<string name="msg_s_i_n_thoa3">Số điện thoại</string>
<string name="lbl_tra_ng_tha_i3">Trạng thái:         </string>
<string name="msg_li_ch_s_xe_va">Lịch sử xe vào /ra bãi gửi xe</string>
<string name="msg_ma_giao_di_ch2">Mã giao dịch:    12841249</string>
<string name="lbl_danh_sa_ch_xe">Danh sách xe</string>
<string name="lbl_th_ng_ba_o">Thông báo</string>
<string name="msg_s_i_n_thoa2">Số điện thoại: </string>
<string name="msg_k_t_qua_tru_n">Kết quả trùng khớp</string>
<string name="lbl_1_000_000">1.000.000đ</string>
<string name="lbl_113131647124">113131647124</string>
<string name="lbl_cmnd_cccd">CMND/ CCCD</string>
<string name="msg_s_d_vi_54">Số dư ví: 54.000đ</string>
<string name="msg_nh_p_m_t_kh">Nhập mật khẩu mới</string>
<string name="lbl_ta_i_khoa_n">Tài khoản</string>
<string name="lbl_na_p_ti_n">Nạp tiền</string>
<string name="lbl_50_000">50.000đ</string>
<string name="msg_quy_kha_ch_vui">Quý khách vui lòng cung cấp thông tin đã đăng ký dịch vụ để xác thực yêu cầu cấp lại mật khẩu</string>
<string name="msg_k_t_qua_sau">Kết quả sau đối chiếu: </string>
<string name="lbl_tha_nh_c_ng">Thành công</string>
<string name="lbl_i_m_t_kh_u">Đổi mật khẩu</string>
<string name="lbl_i_a_chi">Địa chỉ: </string>
<string name="msg_nh_p_ma_ta_i2">Nhập mã tài khoản/ sđt cần thay thông tin</string>
<string name="msg_thanh_toa_n_ti">Thanh toán tiền gửi xe</string>
<string name="lbl_m_t_kh_u">Mật khẩu</string>
<string name="msg_s_d_kha_du">SỐ DƯ KHẢ DỤNG (VNĐ)</string>
<string name="lbl_m_t_kh_u_cu">Mật khẩu cũ</string>
<string name="msg_nh_p_m_t_kh2">Nhập mật khẩu cũ</string>
<string name="lbl_0389682304">0389682304</string>
<string name="msg_nap_tien_vao_ta">Nap tien vao tai khoan</string>
<string name="lbl_gd0001">GD0001</string>
</resources>
