<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listellipsetwoRowModel" type="com.hngsapplication.app.modules.frameeight.data.model.ListellipsetwoRowModel"/>
    </data>
    <LinearLayout android:gravity="end"
        android:id="@+id/linearColumnellipsetwo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowellipsetwo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="horizontal">
            <View
                android:background="@drawable/rectangle_bg_gray_600_radius_9"
                android:id="@+id/viewEllipseTwo"
                android:layout_height="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_18pxh"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtThigiangi"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_9pxh"
                android:layout_weight="0.93" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{listellipsetwoRowModel.txtThigiangi}"
                style="@style/txtInterregular15_2" tools:text="@string/msg_th_i_gian_g_i"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowlinefive"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_2pxh"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <View android:background="@color/gray_401"
                android:id="@+id/lineLineFive"
                android:layout_height="@dimen/_142pxv"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_weight="0.0" android:layout_width="0dp"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnthigianly"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_weight="1.0" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtThigianly"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listellipsetwoRowModel.txtThigianly}"
                    style="@style/txtInterregular15_2" tools:text="@string/msg_th_i_gian_l_y"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{listellipsetwoRowModel.txtLanguage}"
                    style="@style/txtInterregular15_3" tools:text="@string/lbl_30e_330_60t2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listellipsetwoRowModel.txtLanguageOne}"
                    style="@style/txtInterregular15_2" tools:text="@string/msg_s_ti_n"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listellipsetwoRowModel.txtLanguageTwo}"
                    style="@style/txtInterregular15_2" tools:text="@string/msg_ma_giao_di_ch"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageThree"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listellipsetwoRowModel.txtLanguageThree}"
                    style="@style/txtInterregular15_2" tools:text="@string/msg_tra_ng_tha_i"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
